--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
     "@tailwindcss/typography": "^0.5.9",
     "prettier": "^3.0.3",
     "prettier-plugin-astro": "^0.12.0",
-    "prettier-plugin-tailwindcss": "^0.5.4",
-    "vite": "^6.3.5"
+    "prettier-plugin-tailwindcss": "^0.5.4"
   }
 }
